--- a/index.html
+++ b/index.html
@@ -124,6 +124,90 @@
                 <div class="col-md-9">
                     <h2 style="font-size: 2rem;margin-bottom: 1.5rem;">最近更新</h2>
                     <div class="xcblog-blog-list">
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-26">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-26-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/20dab0bf69345ed79374f0a85a060b49.webp" alt="10月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-26-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月26日→19.5M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了韩国、新加坡、香港、加拿大、美国、欧洲、日本等地区,最高速度可达19.5 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-25">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-25-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/2314dd64702ac696f11763aeb3947629.webp" alt="10月25日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-25-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月25日→22.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了美国、加拿大、香港、日本、欧洲、韩国、新加坡等地区,最高速度可达22.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-24">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-24-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9d3a5a50af54c5cdfab216c7a85a8b95.webp" alt="10月24日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-24-free-high-speed-nodes.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月24日→21.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了日本、加拿大、新加坡、韩国、美国、香港、欧洲等地区,最高速度可达21.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-23">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-23-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/fbe402bdb74e22057f867e36ba8365f5.webp" alt="10月23日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-23-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月23日→19.2M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了香港、日本、加拿大、欧洲、美国、韩国、新加坡等地区,最高速度可达19.2 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-22">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-22-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="10月22日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-22-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月22日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了欧洲、加拿大、韩国、新加坡、香港、美国、日本等地区,最高速度可达21.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
+                                                <div class="row item xcblog-blog-item" data-date="2025-10-21">
+                            <div class="col-md-3">
+                                <a href="/free-nodes/2025-10-21-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20241223-1/9970033df7c0b33bf2d249365f7aa1c5.webp" alt="10月21日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
+                                </a>
+                            </div>
+                            <div class="col-md-9">
+                                <a href="/free-nodes/2025-10-21-free-subscribe-node.htm" class="xcblog-blog-url">
+                                    <h3 class="xcblog-blog-title">10月21日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
+                                </a>
+                                <p>
+                                    这一次的节点更新覆盖了新加坡、美国、加拿大、欧洲、韩国、香港、日本等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
+                            </div>
+                        </div>
                                                 <div class="row item xcblog-blog-item" data-date="2025-10-20">
                             <div class="col-md-3">
                                 <a href="/free-nodes/2025-10-20-node-share.htm" class="xcblog-blog-url">
@@ -320,90 +404,6 @@
                                     这一次的节点更新覆盖了香港、美国、欧洲、新加坡、日本、加拿大、韩国等地区,最高速度可达22.8 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
                             </div>
                         </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-06">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/92fffd0fe05881a022ba878442f3015e.webp" alt="10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-6-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了欧洲、韩国、美国、香港、新加坡、加拿大、日本等地区,最高速度可达20.1 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-05">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f2e120fb108b9b6430e7c0ee60aa5a25.webp" alt="10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-5-free-node-subscribe-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、韩国、新加坡、欧洲、香港、日本、美国等地区,最高速度可达21.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-04">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-4-node-share.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/f8cf90d508ad3c0519c160f1d4bb1b9e.webp" alt="10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-4-node-share.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了美国、香港、韩国、加拿大、新加坡、日本、欧洲等地区,最高速度可达20.3 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-03">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-3-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/8ce8bac85e567b50422ce5e1cbf7940c.webp" alt="10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-3-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">10月3日→20.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了加拿大、韩国、日本、欧洲、香港、美国、新加坡等地区,最高速度可达20.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-02">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-2-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/b46febb9120ded394f9d949f5e0ee16d.webp" alt="10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-2-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">10月2日→21.4M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了香港、美国、韩国、新加坡、加拿大、日本、欧洲等地区,最高速度可达21.4 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
-                                                <div class="row item xcblog-blog-item" data-date="2025-10-01">
-                            <div class="col-md-3">
-                                <a href="/free-nodes/2025-10-1-node-share-links.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20241223-1/46ee05e4d0152128fb5783fd0b1ffa7d.webp" alt="10月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址" style="width:100%;">
-                                </a>
-                            </div>
-                            <div class="col-md-9">
-                                <a href="/free-nodes/2025-10-1-node-share-links.htm" class="xcblog-blog-url">
-                                    <h3 class="xcblog-blog-title">10月1日→18.6M/S|2025年最新免费节点Sockscap64订阅链接地址</h3>
-                                </a>
-                                <p>
-                                    这一次的节点更新覆盖了日本、加拿大、美国、香港、韩国、新加坡、欧洲等地区,最高速度可达18.6 M/S。只需复制下方的Clash节点/V2ray节点和singbox节点订阅链接,在客户端添加后即可正常使用。                                </p>
-                            </div>
-                        </div>
                                             </div>
                 </div>
                 <div class="col-md-3">
@@ -413,16 +413,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-10-6-node-share-links.htm" title="10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址">10月6日→20.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-13-free-high-speed-nodes.htm" title="10月13日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">10月13日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-9-node-share-links.htm" title="10月9日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">10月9日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-16-free-node-subscribe.htm" title="9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">9月16日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-11-free-high-speed-nodes.htm" title="10月11日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">10月11日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-9-11-node-share-links.htm" title="9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">9月11日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                         <li class="py-2"><a href="/free-nodes/2025-10-4-node-share.htm" title="10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址">10月4日→20.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-9-free-node-subscribe.htm" title="9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址">9月9日→19.4M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-10-11-free-high-speed-nodes.htm" title="10月11日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址">10月11日→20.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-29-node-share-links.htm" title="9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址">9月29日→18.5M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-28-free-subscribe-node.htm" title="9月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址">9月28日→22.9M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-9-21-node-share-links.htm" title="9月21日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址">9月21日→19.3M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-30-free-node-subscribe-links.htm" title="9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址">9月30日→20.2M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-15-node-share-links.htm" title="10月15日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址">10月15日→22.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-5-free-node-subscribe-links.htm" title="10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址">10月5日→21.6M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-22-free-node-subscribe.htm" title="10月22日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址">10月22日→21.1M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-9-14-node-share.htm" title="9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址">9月14日→19.7M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-10-9-node-share-links.htm" title="10月9日→18M/S|2025年最新免费节点Sockscap64订阅链接地址">10月9日→18M/S|2025年最新免费节点Sockscap64订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -434,7 +434,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
+                <h4><span class="badge" style="float: right;">26</span> <a href="/date/2025-10/" title="2025-10 归档">2025-10</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
